Fix typo in tutorial dialogue

--- a/Godot/graph_visualizer/translations/Translation.csv
+++ b/Godot/graph_visualizer/translations/Translation.csv
@@ -34,7 +34,7 @@ Visit each planet to rescue the red pandas in those planets";"Aquí hay pandas r
 Visita cada planeta para rescatar los pandas rojos en esos planetas."
 FIRST_TUTORIAL_DIALOGUE2;Congratulations! You saved a little red panda!;¡Felicidades! ¡Has salvado un pandita rojo!
 FIRST_TUTORIAL_DIALOGUE3;You are ready to go to the next level and rescue more pandas!;¡Ve al próximo nivel y salva más pandas!
-TUTORIAL_2_DIALOGUE_1;"The AI copilot neural network is too expensive and your have almost no fuel.
+TUTORIAL_2_DIALOGUE_1;"The AI copilot neural network is too expensive and you have almost no fuel.
 It is better to use manual instructions.";"La red neuronal del copiloto es muy costosa y casi no te queda combustible.
 Será mejor usar las instrucciones manuales."
 TUTORIAL_2_DIALOGUE_2;Now we are going to show you how to use our code instructions.;Ahora te mostraremos cómo usar nuestras instrucciones de código.
