--- a/Godot/graph_visualizer/translations/Translation.csv
+++ b/Godot/graph_visualizer/translations/Translation.csv
@@ -87,3 +87,4 @@ Go and finish the next level!";"¡Felicidades! Completaste el nivel de DFS (Dept
 ¡Ve al siguiente nivel!"
 Next Level;Next Level;Siguiente nivel
 Reset Level;Reset Level;Reiniciar nivel
+Error: Wrong answer;Error: Wrong answer;Error: Respuesta equivocada
