Add translation for questions  in spanish in  DFS

--- a/Godot/graph_visualizer/translations/Translation.csv
+++ b/Godot/graph_visualizer/translations/Translation.csv
@@ -87,3 +87,4 @@ Go and finish the next level!";"¡Felicidades! Completaste el nivel de DFS (Dept
 Next Level;Next Level;Siguiente nivel
 Reset Level;Reset Level;Reiniciar nivel
 Error: Wrong answer;Error: Wrong answer;Error: Respuesta equivocada
+Is the Stack s empty?;Is the Stack s empty?;Está la pila (Stack) S vacía?
