--- a/Godot/graph_visualizer/translations/Translation.csv
+++ b/Godot/graph_visualizer/translations/Translation.csv
@@ -88,4 +88,4 @@ Next Level;Next Level;Siguiente nivel
 Reset Level;Reset Level;Reiniciar nivel
 Error: Wrong answer;Error: Wrong answer;Error: Respuesta equivocada
 Is the Stack s empty?;Is the Stack s empty?;Está la pila (Stack) S vacía?
-PRESS_SPACE_HINT_TEXT;Press SPACE to navigate to the next instruction;Presiona ESPACIO para navegar a la siguiente instrucción
+PRESS_SPACE_HINT_TEXT;Remember to Press SPACE to navigate to the next instruction;Recuerda que puedes presionar ESPACIO para navegar a la siguiente instrucción
