Add level lost translation for tutorial 2

--- a/Godot/graph_visualizer/translations/Translation.csv
+++ b/Godot/graph_visualizer/translations/Translation.csv
@@ -89,3 +89,5 @@ Reset Level;Reset Level;Reiniciar nivel
 Error: Wrong answer;Error: Wrong answer;Error: Respuesta equivocada
 Is the Stack s empty?;Is the Stack s empty?;Está la pila (Stack) S vacía?
 PRESS_SPACE_HINT_TEXT;Remember to Press SPACE to navigate to the next instruction;Recuerda que puedes presionar ESPACIO para navegar a la siguiente instrucción
+Restart Level;Restart Level;Reiniciar nivel
+"  Return to Menu  ";"  Return to Menu  ";"  Volver al Menu  "
