Intro, acknowledgment, main file and content of the thesis added

--- a/ReunionesYAvances/tesis.tex
+++ b/ReunionesYAvances/tesis.tex
@@ -14,7 +14,8 @@ Santiago, Chile}
 \begin{document}
 \maketitle
 
-\section{Introducción}
+\input{IntroTesis.tex}
+
 
 
 \section{Trabajo relacionado} 
