--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -14,37 +14,108 @@
   timestamp = {2009-03-03T17:19:04.000+0100}
 }
 
-@BOOK{Pro1990,
-  title = {Stochastic Integration and Differential Equations},
-  publisher = {Springer},
-  year = {1990},
-  author = {Protter, Philip},
-  added-at = {2008-03-07T17:14:08.000+0100},
-  biburl = {http://www.bibsonomy.org/bibtex/2d68435e7d88e42c06a1ee6143a2f0c25/alex},
-  interhash = {770eb527cd5c3a7649b952496b8e3aa6},
-  intrahash = {d68435e7d88e42c06a1ee6143a2f0c25},
-  keywords = {integration stochastics stochastik},
-  timestamp = {2008-03-07T17:14:08.000+0100}
+@article{The_Role_of_Attention_Learning_Digital_Age,
+  title={The Role of Attention in Learning in the Digital Age},
+  author={Jason M. Lodge and William J. Harrison},
+  journal={The Yale Journal of Biology and Medicine},
+  year={2019},
+  volume={92},
+  pages={21 - 28},
+  url={https://api.semanticscholar.org/CorpusID:85541524}
 }
 
-@BOOK{GVK25295551X,
-  title = {Continuous martingales and Brownian motion},
-  publisher = {Springer},
-  year = {1999},
-  author = {Revuz, {Daniel} and Yor, {Marc}},
-  number = {293},
-  series = {Grundlehren der mathematischen Wissenschaften},
-  address = {Berlin [u.a.]},
-  edition = {3. ed},
-  added-at = {2009-08-21T11:04:17.000+0200},
-  biburl = {http://www.bibsonomy.org/bibtex/23311a243311e26aface17433292a5e30/fbw_hannover},
-  interhash = {8bf02539150574460aa1e3b15ca0a9c4},
-  intrahash = {3311a243311e26aface17433292a5e30},
-  isbn = {3540643257},
-  keywords = {Brownsche_Bewegung Martingal Mathematische_Methoden_der_Physik Stochastische_Analysis
-	Thermodynamik Wahrscheinlichkeitsrechnung statistische_Physik},
-  pagetotal = {XIII, 602},
-  ppn_gvk = {25295551X},
-  timestamp = {2009-08-21T11:04:17.000+0200},
-  url = {http://gso.gbv.de/DB=2.1/CMD?ACT=SRCHA&SRT=YOP&IKT=1016&TRM=ppn+25295551X&sourceid=fbw_bibsonomy}
+@misc{UN2023_ImpactDigitalTechnologies,
+  author = {United Nations},
+  title = {The Impact of Digital Technologies},
+  year = {2023},
+  url = {https://www.un.org/en/un75/impact-digital-technologies},
+  note = {Accessed: yyyy-mm-dd}
+}
+
+@article{Bisson1996FunInLEarningPedagogicalRole,
+  title={Fun in Learning: The Pedagogical Role of Fun in Adventure Education},
+  author={Christian Bisson and John L. Luckner},
+  journal={Journal of Experiential Education},
+  year={1996},
+  volume={19},
+  pages={108 - 112},
+  url={https://api.semanticscholar.org/CorpusID:140737737}
+}
+
+@inproceedings{Selwyn2014LookingF,
+  title={Looking forward : Reimagining digital technology and the contemporary university},
+  author={Neil Selwyn},
+  year={2014},
+  url={https://api.semanticscholar.org/CorpusID:227436550}
+}
+
+@inproceedings{Zimmerman2011HandbookOS,
+  title={Handbook of Self-Regulation of Learning and Performance},
+  author={B. Zimmerman and Dale H. Schunk},
+  year={2011},
+  url={https://api.semanticscholar.org/CorpusID:54886062}
+}
+
+@article{Wang2022ComprehensivelySummarizeDistractions,
+  title={Comprehensively Summarizing What Distracts Students from Online Learning: A Literature Review},
+  author={Cheng-Hsin Wang},
+  journal={Human Behavior and Emerging Technologies},
+  year={2022},
+  url={https://api.semanticscholar.org/CorpusID:252855881}
+}
+
+@article{Domoff2019AddictivePU,
+  title={Addictive phone use and academic performance in adolescents},
+  author={Sarah E. Domoff and Ryan P. Foley and Rick C. Ferkel},
+  journal={Human Behavior and Emerging Technologies},
+  year={2019},
+  url={https://api.semanticscholar.org/CorpusID:203521249}
+}
+
+@article{Fries2007LearningMotivationalInterference,
+  title={Learning in the Face of Temptation: The Case of Motivational Interference},
+  author={Stefan Fries and F. Meredith Dietz},
+  journal={The Journal of Experimental Education},
+  year={2007},
+  volume={76},
+  pages={112 - 93},
+  url={https://api.semanticscholar.org/CorpusID:144812695}
+}
+
+@article{Serious_Gaming_Gamification_Education_Health_Professions,
+  author="Gentry, Sarah Victoria
+  and Gauthier, Andrea
+  and L'Estrade Ehrstrom, Beatrice
+  and Wortley, David
+  and Lilienthal, Anneliese
+  and Tudor Car, Lorainne
+  and Dauwels-Okutsu, Shoko
+  and Nikolaou, Charoula K
+  and Zary, Nabil
+  and Campbell, James
+  and Car, Josip",
+  title="Serious Gaming and Gamification Education in Health Professions: Systematic Review",
+  journal="J Med Internet Res",
+  year="2019",
+  month="Mar",
+  day="28",
+  volume="21",
+  number="3",
+  pages="e12994",
+  keywords="video games; education, professional; review",
+  abstract="Background: There is a worldwide shortage of health workers, and this issue requires innovative education solutions. Serious gaming and gamification education have the potential to provide a quality, cost-effective, novel approach that is flexible, portable, and enjoyable and allow interaction with tutors and peers. Objective: The aim of this systematic review was to evaluate the effectiveness of serious gaming/gamification for health professions education compared with traditional learning, other types of digital education, or other serious gaming/gamification interventions in terms of patient outcomes, knowledge, skills, professional attitudes, and satisfaction (primary outcomes) as well as economic outcomes of education and adverse events (secondary outcomes). Methods: A comprehensive search of MEDLINE, EMBASE, Web of Knowledge, Educational Resources Information Centre, Cochrane Central Register of Controlled Trials, PsycINFO, and Cumulative Index to Nursing and Allied Health Literature was conducted from 1990 to August 2017. Randomized controlled trials (RCTs) and cluster RCTs were eligible for inclusion. Two reviewers independently searched, screened, and assessed the study quality and extracted data. A meta-analysis was not deemed appropriate due to the heterogeneity of populations, interventions, comparisons, and outcomes. Therefore, a narrative synthesis is presented. Results: A total of 27 RCTs and 3 cluster RCTs with 3634 participants were included. Two studies evaluated gamification interventions, and the remaining evaluated serious gaming interventions. One study reported a small statistically significant difference between serious gaming and digital education of primary care physicians in the time to control blood pressure in a subgroup of their patients already taking antihypertensive medications. There was evidence of a moderate-to-large magnitude of effect from five studies evaluating individually delivered interventions for objectively measured knowledge compared with traditional learning. There was also evidence of a small-to-large magnitude of effect from 10 studies for improved skills compared with traditional learning. Two and four studies suggested equivalence between interventions and controls for knowledge and skills, respectively. Evidence suggested that serious gaming was at least as effective as other digital education modalities for these outcomes. There was insufficient evidence to conclude whether one type of serious gaming/gamification intervention is more effective than any other. There was limited evidence for the effects of serious gaming/gamification on professional attitudes. Serious gaming/gamification may improve satisfaction, but the evidence was limited. Evidence was of low or very low quality for all outcomes. Quality of evidence was downgraded due to the imprecision, inconsistency, and limitations of the study. Conclusions: Serious gaming/gamification appears to be at least as effective as controls, and in many studies, more effective for improving knowledge, skills, and satisfaction. However, the available evidence is mostly of low quality and calls for further rigorous, theory-driven research. ",
+  issn="1438-8871",
+  doi="10.2196/12994",
+  url="http://www.ncbi.nlm.nih.gov/pubmed/30920375"
+  }
+
+
+@article{Yu2020TheEffectsOfEducationGames,
+  title={The Effect of Educational Games on Learning Outcomes, Student Motivation, Engagement and Satisfaction},
+  author={Zhonggen Yu and Min Gao and Lifei Wang},
+  journal={Journal of Educational Computing Research},
+  year={2020},
+  volume={59},
+  pages={522 - 546},
+  url={https://api.semanticscholar.org/CorpusID:228840833}
 }
